2004-07-22  Glynn Foster  <glynn.foster@sun.com>

	* help/ja/char-palette-ja.omf,
	* help/ja/char-palette.xml,
	* help/ja/legal.xml: Sync back the docs from the 
	Sun team.
	* help/ja/figures/charpalette_applet.png,
	* help/ja/figures/charpalette_group.png: Update 
	figures.
	* help/ja/figures/charpick_applet.png,
	* help/ja/figures/charpick_characters.png,
	* help/ja/figures/charpick_chargroup.png,
	* help/ja/figures/mailcheck_applet.png: Remove old 
	figures.

2004-07-21  Mark McLoughlin  <mark@skynet.ie>

	* help/ja/Makefile.am,
	  help/ja/mailcheck-ja.omf,
	  help/ja/mailcheck.xml: remove mailcheck docs and
	install the char-palette ones again.

2004-03-17  Glynn Foster  <glynn.foster@sun.com>

	* help/ja/*: Add ja docs since the original author
	didn't get back to me.

2004-03-16  Glynn Foster  <glynn.foster@sun.com>

	* help/Makefile.am: Add l10n'd docs to the build.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* help/*: Update docs for de, es, fr, it, ko, sv, 
	zh_CN, zh_HK and zh_TW.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* docs/*: Kill off the old sgml based docs.

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* charpick.c (about):
	Set the screen right when the user requests the about
	dialog and it's already there but not on the right
	screen.

2004-02-11 Breda McColgan <breda.mccolgan@sun.com>

	* help/C/char-palette.xml: Updated for GNOME 2.6.
	* help/C/char-palette-C.omf: Updated for GNOME 2.6.
	* help/C/l10n.txt: Updated for GNOME 2.6.

2004-02-08  Jason Leach  <leach@wam.umd.edu>

	* Makefile.am (CLEANFILES): Add .server and .server.in here.
        (#132071, Padraig O'Briain)

2004-02-06  Dennis Smit  <ds@nerds-incorporated.org>

	* charpick.c (chooser_button_clicked):
	set the menu to the right screen.

	This fixes bug: #133587

2004-02-01  Dennis Smit  <ds@nerds-incorporated.org>

	* charpick.h: Added an add_edit_dialog and add_edit_entry
	entry to _charpick_data.
	