@@ -1,3 +1,8 @@
+2004-07-29  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* charpick.c: (applet_destroy): Plug a leak. Closes
+	bug #148498.
+
 2004-07-22  Glynn Foster  <glynn.foster@sun.com>
 
 	* help/ja/char-palette-ja.omf,
